# taskManager

./: .gitignore  README.md  config_utils.py  generate_cases.py  monitor_jobs.py  pyproject.toml  run_cases.py  taskManager.py  taskmanager_config.yaml
docs/: configuration.md  ssh_setup.md  status.md
taskmanager/: __init__.py  config_utils.py  constants.py  generate_cases.py  monitor_jobs.py  run_cases.py  taskmanager.py  taskmanager_config.yaml
template/: Allrun  openfoam.sh.j2
template/0/: p
template/0/include/: sideAndTopPatches
template/constant/: fvModels  momentumTransport  physicalProperties  transportProperties  turbulenceProperties
template/system/: controlDict.j2  decomposeParDict.j2  fvSchemes_1  fvSchemes_2  fvSolution.j2
